--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@ant-design/icons": "^4.2.2",
     "@craco/craco": "^5.6.4",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@okta/okta-react": "^3.0.2",
     "@okta/okta-signin-widget": "^4.1.2",
     "antd": "^4.4.3",
@@ -13,6 +15,8 @@
     "craco-less": "^1.17.0",
     "formik": "^2.1.5",
     "mapbox-gl": "^1.11.1",
+    "material-ui": "^1.0.0-beta.47",
+    "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
