--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
+    "plotly.js": "^1.56.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-map-gl": "^5.2.7",
     "react-map-gl-geocoder": "^2.1.1",
+    "react-plotly.js": "^2.5.0",
+    "react-plotlyjs": "^0.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "yup": "^0.29.3"
